Fixes scrollbar styles.

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -44,8 +44,7 @@ a
     background: transparent
 
 *::-webkit-scrollbar-thumb
-    background-color: #d4d4d4
-    border-radius: 20px
+    background-color: gray
 
 .form-group
     margin-bottom: 10px
